#126: User : Birthday missing
Task-Url: http://github.com/shadedblue/campingbot/issues/126